@@ -1,3 +1,8 @@
+2013-02-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/normal/misc.c (grub_normal_print_device_info): Use KiB to display
+	sizes and display sector size.
+
 2013-02-24  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Implement new command cmosdump.
